--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -1,6 +1,12 @@
-hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog.csdn.net, *.openinstall.io, buy.itunes.apple.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname = api.weibo.cn, *.caixin.com, link.jianshu.com, www.jianshu.com, link.csdn.net, blog.csdn.net, *.openinstall.io, buy.itunes.apple.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
+
+# 财新周刊
+# 财新（by公众号墨鱼手记）
+https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.githubusercontent.com/Redeembynight/own/main/QuantumultX/script/unlock/Caixin.js
+# 财新周刊 解锁会员文章（by公众号墨鱼手记）
+http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cxzk.js
 
 # 简书免跳转
 # 先重写到桌面版
@@ -64,7 +70,7 @@ hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog
 # 哔哩哔哩 Ads
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/ url reject-img
 
-# - 百度地图 Ads
+# 百度地图 Ads
 ^https?:\/\/ss0\.bdstatic\.com/.+_\d{3}_\d{4}\.jpg url reject-img
 
 # 爱奇艺 Ads
@@ -109,14 +115,14 @@ hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog
 ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-img
 ^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/na\/m\/getLoadingPicture url reject-img
 
-# - 网易 Youdao
+# 网易 Youdao
 ^https?:\/\/oimage([a-z])([0-9])\.ydstatic\.com\/.+?&product=adpublish url reject-img
 ^https?:\/\/dsp-impr2\.youdao\.com\/adload.s\? url reject-img
 
 # 飞猪Ads
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.trip\.activity\.querytmsresources\/ url reject-img
 
-# -  喜马拉雅 Ads
+# 喜马拉雅 Ads
 ^https?:\/\/.+\/api\/v\d\/adRealTime url reject-img
 ^https?:\/\/adse.+\.com\/[a-z]{4}\/loading\?appid= url reject-img
 ^https?:\/\/adse\.ximalaya\.com\/ting\/feed\?appid= url reject-img
@@ -135,7 +141,7 @@ hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog
 ^https?:\/\/fdfs\.xmcdn\.com\/group24\/M07\/C4\/3D\/ url reject-img
 ^https?:\/\/fdfs\.xmcdn\.com\/group25\/M05\/92\/D1\/ url reject-img
 
-# - 优酷 Ads
+# 优酷 Ads
 ^.+&duration=\d{2}& url reject-img
 ^https?:\/\/(iyes|(api|hd)\.mobile)\.youku\.com\/(adv|common\/v3\/hudong\/new) url reject-img
 ^https?:\/\/.+\.mp4\?ccode=0902 url reject-img
@@ -170,7 +176,6 @@ hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog
 
 # 微信 Ads (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
-
 
 # 知乎 Ads (By onewayticket255)
 https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
