--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -167,27 +167,21 @@ http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.gi
 ^https?:\/\/www1\.elecfans\.com\/www\/delivery\/ url reject-img
 
 # 微博 Ads (By yichahucha)
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
-^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
-^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php url reject-img
-^https?:\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject-img
-^https?:\/\/sdkapp\.uve\.weibo\.com/\interface\/sdk\/actionad\.php url reject-img
-^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=get_coopen_ads url reject-img
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|\!/photos/pic_recommend_status) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wb_ad.js
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wb_launch.js
+^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|\!/photos/pic_recommend_status) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wb_ad.js
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wb_launch.js
 
 # 微信 Ads (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 # 知乎 Ads (By onewayticket255)
 https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
-https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20people.js
-https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js
-https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js
-https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20answer.js
-https?://link.zhihu.com/?target= url script-request-header https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20link.js
-^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ url reject-img
-^https?:\/\/api\.zhihu\.com\/(launch|real_time) url reject-img
-^https?:\/\/api\.zhihu\.com\/commercial_api\/(launch|real_time) url reject-img
-^https?:\/\/www\.zhihu\.com\/terms\/privacy\/confirm url reject-img
+https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/People.js
+https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/Feed.js
+https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/Recommend.js
+https://api.zhihu.com/v4/questions url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Zhihu/Answer.js
+https?://link.zhihu.com/?target= url script-request-header https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/Link.js
 
 # 腾讯视频 Ads
 ^https?:\/\/btrace.qq.com url reject-img
@@ -207,13 +201,13 @@ https?://link.zhihu.com/?target= url script-request-header https://raw.githubuse
 # Bilibili Ads (By onewayticket255)
 https://app.bilibili.com/x/v2/(splash|search/(defaultword|square)) url reject-200
 https://api.bilibili.com/x/v2/dm/ad url reject-200
-https://app.bilibili.com/x/v2/space?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20space.js
-https://app.bilibili.com/x/resource/show/tab?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20tab.js
-https://app.bilibili.com/x/v2/feed/index?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20feed.js
-https://app.bilibili.com/x/v2/account/mine?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20account.js
-https://app.bilibili.com/x/v2/view?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20view%20relate.js
-https://api.bilibili.com/x/v2/reply/main?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20reply.js
-https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20live.js
+https://app.bilibili.com/x/v2/space?access_key url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Bilibili/Space.js
+https://app.bilibili.com/x/resource/show/tab?access_key url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Bilibili/Tab.js
+https://app.bilibili.com/x/v2/feed/index?access_key url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Bilibili/Feed.js
+https://app.bilibili.com/x/v2/account/mine?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/Account.js
+https://app.bilibili.com/x/v2/view?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/View_Relate.js
+https://api.bilibili.com/x/v2/reply/main?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/Reply.js
+https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/Live.js
 
 # TikTok Ads (By Choler)
 ^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
