--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, *.caixin.com, link.jianshu.com, www.jianshu.com, link.csdn.net, blog.csdn.net, *.openinstall.io, buy.itunes.apple.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname = api.weibo.cn, *.caixin.com, link.jianshu.com, www.jianshu.com, link.csdn.net, blog.csdn.net, *.openinstall.io, buy.itunes.apple.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googlevideo.com,www.youtube.com,s.youtube.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
 
@@ -216,27 +216,11 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 # https:\/\/.*\.xiaoxiao.*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/xxys.js
 
 # YouTube去广告
-^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
-^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
-^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
-^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
-^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
-^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
-^https?:\/\/.+\.googlevideo\.com\/ptracking\?pltype=adhost url reject-img
-^https?:\/\/.+\.youtube\.com\/get_midroll url reject-img
-^https?:\/\/.+\.youtube\.com\/ptracking\? url reject-img
-^https?:\/\/m\.youtube\.com\/_get_ads url reject-img
-^https?:\/\/pagead2\.googlesyndication\.com\/pagead\/ url reject-img
-^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
-^https?:\/\/s\.youtube\.com\/api\/stats\/watchtime?adformat url reject-img
-^https?:\/\/s0\.2mdn\.net\/ads\/ url reject-img
-^https?:\/\/stats\.tubemogul\.com\/stats\/ url reject-img
-ctier=[A-Z] url 302 ctier=A
-^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) url reject-200
+(^https?:\/\/(?!redirector)[\w-]+\.googlevideo\.com\/((?!dclk_video_ads).)+)(ctier=L)(&.+) url 302 $1$3
+^https?:\/\/[\w-]+\.googlevideo\.com\/((?!(dclk_video_ads|videoplayback)).)+&(oad|ctier) url reject
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
+^https?:\/\/\s.youtube.com/api/stats/qoe?.*adformat= url reject
 
 # 网易漫画去开屏广告
 ^https://api-163.biliapi.net/cover url reject-img
