--- a/premium.conf
+++ b/premium.conf
@@ -9,6 +9,7 @@ https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.gith
 http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cxzk.js
 
 # iTunes_verify_receipt
+# Attention：试用订阅——取消订阅——恢复订阅
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
 
 # 小小影视Vip (By Meeta)
