--- a/premium.conf
+++ b/premium.conf
@@ -1,6 +1,9 @@
-hostname =  *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname =  api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
+
+# AbeamTV ip检测
+^https?:\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
 
 # 财新周刊
 # 财新（by公众号墨鱼手记）
