--- a/block_ads.conf
+++ b/block_ads.conf
@@ -37,11 +37,11 @@ hostname =   api-163.biliapi.net/cove, *.googlevideo.com, www.youtube.com, s.you
 
 # 知乎 Ads (By onewayticket255)
 https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
-https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/People.js
-https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/Feed.js
-https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/Recommend.js
-https://api.zhihu.com/v4/questions url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Zhihu/Answer.js
-https?://link.zhihu.com/?target= url script-request-header https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Zhihu/Link.js
+https://api.zhihu.com/people/ url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20people.js
+https://api.zhihu.com/moments/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20feed.js
+https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js
+https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20answer.js
+
 
 # 微信 Ads (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
