--- a/block_ads.conf
+++ b/block_ads.conf
@@ -187,13 +187,13 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 ^https?:\/\/m1\.ad\.10010\.com\/noticeMag\/images\/imageUpload\/2\d{3} url reject-img
 ^https?:\/\/res\.mall\.10010\.cn\/mall\/common\/js\/fa\.js?referer= url reject-img
 
-# 豆瓣 Ads
+# 豆瓣 Ads （还有点问题……暂时停用）
 # (154.8.131.* 疑似自签证书不可验证)
-^https?:\/\/api\.douban\.com\/v2\/app_ads\/common_ads url reject-img
-^https?:\/\/frodo\.douban\.com\/api\/v2\/movie\/banner url reject-img
-^https?:\/\/img\d\.doubanio\.com\/view\/dale-online\/dale_ad\/ url reject-img
-^https?:\/\/(\d{1,3}\.){1,3}\d{1,3}\/view\/dale-online\/dale_ad\/ url reject-img
-^https?:\/\/.+\/v2\/app_ads\/ url reject-img
+# ^https?:\/\/api\.douban\.com\/v2\/app_ads\/common_ads url reject-img
+# ^https?:\/\/frodo\.douban\.com\/api\/v2\/movie\/banner url reject-img
+# ^https?:\/\/img\d\.doubanio\.com\/view\/dale-online\/dale_ad\/ url reject-img
+# ^https?:\/\/(\d{1,3}\.){1,3}\d{1,3}\/view\/dale-online\/dale_ad\/ url reject-img
+# ^https?:\/\/.+\/v2\/app_ads\/ url reject-img
 
 # CSDN 免跳转
 # 先重写到桌面版
