--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,4 +1,4 @@
-hostname =   api-163.biliapi.net/cove, *.googlevideo.com, www.youtube.com, s.youtube.com, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, acs.m.taobao.com, guide-acs.m.taobao.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, ap?.bilibili.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, link.csdn.net, blog.csdn.net, link.jianshu.com, www.jianshu.com, api.smzdm.com, 
+hostname =   api-163.biliapi.net/cove, *.googlevideo.com, www.youtube.com, s.youtube.com, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, acs.m.taobao.com, guide-acs.m.taobao.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, ap?.bilibili.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, api.smzdm.com, 
 
 
 # 动画疯 去广告
@@ -231,25 +231,6 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 # ^https?:\/\/img\d\.doubanio\.com\/view\/dale-online\/dale_ad\/ url reject-img
 # ^https?:\/\/(\d{1,3}\.){1,3}\d{1,3}\/view\/dale-online\/dale_ad\/ url reject-img
 # ^https?:\/\/.+\/v2\/app_ads\/ url reject-img
-
-# CSDN 免跳转
-# 先重写到桌面版
-^https:\/\/blog\.csdn\.net\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36$2
-# 再注入 CSS 进行优化
-^https:\/\/blog\.csdn\.net\/ url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/csdn.res.js
-# 免跳转应用商店(也可以直接 filter 屏蔽 openinstall.io) *重写到桌面版后，这条规则基本就没什么用了*
-^https:\/\/wvhzpj\.openinstall\.io\/ulink url script-echo-response https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/csdn.req.js
-# 移除CSDN跳转第三方网站的中间提醒
-^https?://link\.csdn\.net/api/v1/link/check\?url=(.*) url 302 $1
-
-# 简书免跳转
-# 先重写到桌面版
-^https:\/\/www\.jianshu\.com\/p url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36$2
-# 注入CSS优化
-^https:\/\/www\.jianshu\.com\/p url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/jianshu.js
-# 移除简书跳转第三方网站的中间提醒
-^https://link\.jianshu\.com/\?t=(.*) url 307 $1
-
 
 # SMZDM Ads Block
 ^https?:\/\/api\.smzdm\.com\/v\d\/util\/loading url reject-img
