--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,4 +1,4 @@
-hostname =   api-163.biliapi.net/cove, *.googlevideo.com, www.youtube.com, s.youtube.com, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, acs.m.taobao.com, guide-acs.m.taobao.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, ap?.bilibili.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, api.smzdm.com, 
+hostname =   api-163.biliapi.net/cove, *.googlevideo.com, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, acs.m.taobao.com, guide-acs.m.taobao.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, ap?.bilibili.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, api.smzdm.com, 
 
 
 # 动画疯 去广告
@@ -10,11 +10,8 @@ hostname =   api-163.biliapi.net/cove, *.googlevideo.com, www.youtube.com, s.you
 ^https://api-163.biliapi.net/cover url reject-img
 
 # YouTube去广告
-(^https?:\/\/(?!redirector)[\w-]+\.googlevideo\.com\/((?!dclk_video_ads).)+)(ctier=L)(&.+) url 302 $1$3
-^https?:\/\/[\w-]+\.googlevideo\.com\/((?!(dclk_video_ads|videoplayback)).)+&(oad|ctier) url reject
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
-^https?:\/\/\s.youtube.com/api/stats/qoe?.*adformat= url reject
+ctier=[A-Z] url 302 ctier=A
+^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) url reject-200
 
 # TikTok Ads (By Choler)
 # ^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
