--- a/premium.conf
+++ b/premium.conf
@@ -7,9 +7,9 @@ hostname =  api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com, 
 
 # 财新周刊
 # 财新（by公众号墨鱼手记）
-https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.githubusercontent.com/Redeembynight/own/main/QuantumultX/script/unlock/Caixin.js
+# https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.githubusercontent.com/Redeembynight/own/main/QuantumultX/script/unlock/Caixin.js
 # 财新周刊 解锁会员文章（by公众号墨鱼手记）
-http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cxzk.js
+# http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cxzk.js
 
 # iTunes_verify_receipt
 # Attention：试用订阅——取消订阅——恢复订阅
