--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,4 +1,4 @@
-hostname = api-163.biliapi.net/cove, *.googlevideo.com, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, acs.m.taobao.com, guide-acs.m.taobao.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, ap?.bilibili.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, api.smzdm.com, 
+hostname = api-163.biliapi.net/cove, *.googlevideo.com, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, ap?.bilibili.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, api.smzdm.com, 
 
 # AbeamTV
 # api.abema.io
@@ -132,9 +132,6 @@ ctier=[A-Z] url 302 ctier=A
 ^https?:\/\/fdfs\.xmcdn\.com\/group24\/M03\/E6\/09\/ url reject-img
 ^https?:\/\/fdfs\.xmcdn\.com\/group24\/M07\/C4\/3D\/ url reject-img
 ^https?:\/\/fdfs\.xmcdn\.com\/group25\/M05\/92\/D1\/ url reject-img
-
-# 飞猪Ads
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.trip\.activity\.querytmsresources\/ url reject-img
 
 # 网易 Youdao
 ^https?:\/\/oimage([a-z])([0-9])\.ydstatic\.com\/.+?&product=adpublish url reject-img
