--- a/premium.conf
+++ b/premium.conf
@@ -1,6 +1,9 @@
-hostname =  api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname =  api.xiuxiu.meitu.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
+
+#美图秀秀粉钻 (by-Gökotta)
+https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json url script-response-body https://raw.githubusercontent.com/callmeheihei/Black/script/Crack/mtxx.js
 
 # AbeamTV ip检测
 ^https?:\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
