--- a/premium.conf
+++ b/premium.conf
@@ -1,6 +1,12 @@
-hostname =  api.picsart.c*, api.meiease.c*, api.revenuecat.com, api.xiuxiu.meitu.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname =  vstou.faxingwu.com, pay.wecut.com, api.picsart.c*, api.meiease.c*, api.revenuecat.com, api.xiuxiu.meitu.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
+
+#卡通相机
+http://vstou.faxingwu.com/huihua/user/getUser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ktxj.js
+
+#MolyCam
+https:\/\/pay\.wecut\.com\/apple\/(iosVerifyReceipt|iosAppVerifyReceipt)\.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/mv.js
 
 #picsart美易
 ^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/PicsArt.js
