--- a/optimize_web.conf
+++ b/optimize_web.conf
@@ -1,8 +1,9 @@
-hostname = guide-acs.m.taobao.com, link.csdn.net, blog.csdn.net, link.jianshu.com, www.jianshu.com, *.baidu.com, 
+hostname =  link.csdn.net, blog.csdn.net, link.jianshu.com, www.jianshu.com, *.baidu.com, 
 
 
 # 替换支付宝内淘票票评分为豆瓣评分
-^https:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopshowapi\.getextendshowbyid url script-response-body https://raw.githubusercontent.com/Peng-YM/QuanX/master/Rewrites/TaoPiaoPiao/taopiaopiao.js
+# guide-acs.m.taobao.com,
+# ^https:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopshowapi\.getextendshowbyid url script-response-body https://raw.githubusercontent.com/Peng-YM/QuanX/master/Rewrites/TaoPiaoPiao/taopiaopiao.js
 
 
 # 简书免跳转
