--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,4 +1,9 @@
-hostname = -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, afd.baidu.com, api-163.biliapi.net/cove, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, ap?.bilibili.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
+hostname = app.bilibili.com, grpc.biliapi.net, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, afd.baidu.com, api-163.biliapi.net/cove, *.amemv.com, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, mlife.jf365.boc.cn, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, mps.95508.com/mps/club/cardPortals/adv, m.client.10010.com, *.douban.com, *.doubanio.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
+
+# bilibili去广告(iOS15)
+# 开屏页广告,推荐页广告,动态(推荐话题和列表广告),视频播放页面(up主推荐广告,相关推荐广告)
+^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab\/v2) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-json.js
+^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-proto.js
 
 # YouTube去广告
 (^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=L(&.+) url 302 $1&ctier=A$2
@@ -11,7 +16,6 @@ hostname = -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.y
 # 百度贴吧去广告
 ^(http\:\/\/c\.tieba\.baidu\.com\/(tiebaads\/commonbatch|c\/s\/sync)|https\:\/\/afd\.baidu\.com\/afd\/entry) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/tieba-json.js
 ^http\:\/\/c\.tieba\.baidu\.com\/c\/f\/((frs|pb)\/page|excellent\/personalized) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/tieba-proto.js
-
 
 # AbeamTV
 # api.abema.io
@@ -194,20 +198,6 @@ https://zhuanlan\.zhihu\.com/api/articles/\d+/recommendation url reject-200
 
 # 百度地图 Ads
 ^https?:\/\/ss0\.bdstatic\.com/.+_\d{3}_\d{4}\.jpg url reject-img
-
-# 哔哩哔哩 Ads
-^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/ url reject-img
-# Bilibili Ads (By onewayticket255)
-https://app.bilibili.com/x/v2/(splash|search/(defaultword|square)) url reject-200
-https://api.bilibili.com/x/v2/dm/ad url reject-200
-https://app.bilibili.com/x/v2/space?access_key url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Bilibili/Space.js
-https://app.bilibili.com/x/resource/show/tab?access_key url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Bilibili/Tab.js
-https://app.bilibili.com/x/v2/feed/index?access_key url script-response-body https://raw.githubusercontent.com/sve1r/Rules-For-Quantumult-X/develop/Scripts/AdBlock/Bilibili/Feed.js
-https://app.bilibili.com/x/v2/account/mine?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/Account.js
-https://app.bilibili.com/x/v2/view?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/View_Relate.js
-https://api.bilibili.com/x/v2/reply/main?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/Reply.js
-https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key url script-response-body https://github.com/sve1r/Rules-For-Quantumult-X/blob/develop/Scripts/AdBlock/Bilibili/Live.js
-
 
 # BOC Ads
 ^https?:\/\/mlife\.jf365\.boc\.cn\/AppPrj\/FirstPic\.do\? url reject-img
