--- a/optimize_web.conf
+++ b/optimize_web.conf
@@ -1,7 +1,9 @@
-hostname =  link.csdn.net, blog.csdn.net, link.jianshu.com, www.jianshu.com, *.baidu.com, 
+hostname =  link.csdn.net, blog.csdn.net, link.jianshu.com, www.jianshu.com, *.baidu.com, weather-data.apple.com/v2/weather
 
+# 连接US天气空气质量
+^https:\/\/weather-data\.apple\.com\/v2\/weather\/[\w-]+\/-?[0-9]+\.[0-9]+\/-?[0-9]+\.[0-9]+\? url script-response-body https://raw.githubusercontent.com/githubdulong/Script/master/iOS15_Weather_AQI_US.js
 
-# 替换支付宝内淘票票评分为豆瓣评分
+# 替换支付宝内淘票票评分为豆瓣评分（不稳定，停用）
 # guide-acs.m.taobao.com,
 # ^https:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopshowapi\.getextendshowbyid url script-response-body https://raw.githubusercontent.com/Peng-YM/QuanX/master/Rewrites/TaoPiaoPiao/taopiaopiao.js
 
