--- a/optimize_web.conf
+++ b/optimize_web.conf
@@ -1,7 +1,4 @@
-hostname =  link.csdn.net, blog.csdn.net, link.jianshu.com, www.jianshu.com, *.baidu.com, weather-data.apple.com/v2/weather
-
-# 连接US天气空气质量
-^https:\/\/weather-data\.apple\.com\/v2\/weather\/[\w-]+\/-?[0-9]+\.[0-9]+\/-?[0-9]+\.[0-9]+\? url script-response-body https://raw.githubusercontent.com/githubdulong/Script/master/iOS15_Weather_AQI_US.js
+hostname =  link.csdn.net, blog.csdn.net, link.jianshu.com, www.jianshu.com, *.baidu.com,
 
 # 替换支付宝内淘票票评分为豆瓣评分（不稳定，停用）
 # guide-acs.m.taobao.com,
